syntax = "proto3";

option csharp_namespace = "WizBot.GrpcApi";

package greet;

service GrpcGreet {
  rpc GetGreetSettings (GetGreetRequest) returns (GetGreetReply);
  rpc UpdateGreet (UpdateGreetRequest) returns (UpdateGreetReply);
  rpc TestGreet (TestGreetRequest) returns (TestGreetReply);
}

message GetGreetReply {
  GrpcGreetSettings greet = 1;
  GrpcGreetSettings greetDm = 2;
  GrpcGreetSettings bye = 3;
  GrpcGreetSettings boost = 4;
}

message GrpcGreetSettings {
  optional uint64 channelId = 1;
  string message = 2;
  bool isEnabled = 3;
  GrpcGreetType type = 4;
}

message GetGreetRequest {
  uint64 guildId = 1;
}

message UpdateGreetRequest {
  uint64 guildId = 1;
  GrpcGreetSettings settings = 2;
}

enum GrpcGreetType {
  Greet = 0;
  GreetDm = 1;
  Bye = 2;
  Boost = 3;
}

message UpdateGreetReply {
  bool success = 1;
}

message TestGreetRequest {
  uint64 guildId = 1;
  uint64 channelId = 2;
  uint64 userId = 3;
  GrpcGreetType type = 4;
}

message TestGreetReply {
  bool success = 1;
  string error = 2;
}